# KYC-Attestation-Contract-

./: .gitignore  CHECKLIST.md  Cargo.toml  DEPLOYMENT.md  FULLSTACK_README.md  PROJECT_SUMMARY.md  README.md  VERIFICATION.md
backend/: .env  .env.example  Cargo.toml
backend/src/: handlers.rs  main.rs  models.rs  stellar.rs
bindings/: README.md
bindings/src/: index.ts
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: Header.vue
frontend/src/router/: index.js
frontend/src/views/: AdminPanel.vue  Hero.vue  IssuerPanel.vue  UserPanel.vue  VerifyPanel.vue
scripts/: build.ps1  deploy.ps1  examples.ps1  verify-deployment.ps1
src/: lib.rs
