[package]
name = "kyc-attestation"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Reusable KYC Attestation Smart Contract for Soroban (Stellar)"
license = "MIT"
repository = "https://github.com/yourusername/kyc-attestation"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use a recent soroban-sdk compatible with the current Soroban toolchain. Adjust if your toolchain expects a different version.
soroban-sdk = "21.7.1"

[dev-dependencies]
soroban-sdk = { version = "21.7.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
